Updated App Academy project descriptions

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3795,10 +3795,6 @@ input, select, textarea {
 
 		}
 
-.skylight {
-	object-fit: contain;
-}
-
-.full-stack-project {
+.skylight, .full-stack-project {
 	object-fit: contain;
 }
